--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,12 +21,20 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: stable
-      # More assembly might be required: Docker logins, GPG, etc.
-      # It all depends on your needs.
+      - name: setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
+      - name: webapp build npm install
+        working-directory: web
+        run: |
+          npm install
+          npm run build
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
