--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.12.0",
     "@uiw/react-json-view": "^2.0.0-alpha.12",
     "mark.js": "^8.11.1",
     "react": "^18.2.0",
