--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-table": "^8.12.0",
     "@uiw/react-json-view": "^2.0.0-alpha.12",
+    "ag-grid-react": "^31.1.1",
     "mark.js": "^8.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
